# scarab-infra

./: .dockerignore  .gitignore  LICENSE  README.md  last_built_tag.txt  quickstart_env.yaml  requirements.txt  run.sh  sci
.github/workflows/: check-json-validity.yml  docker-image.yml  e2e-sim.yml  test-heredoc.yml  test-pr.yml
common/: Dockerfile.common  Dockerfile.oss  Dockerfile.tailbench
common/SimPoint.3.2/analysiscode/: FVParser.cpp  Makefile  Simpoint.cpp  Simpoint.h
common/scripts/: common_entrypoint.sh  minimize_trace.sh  perf_entrypoint.sh  replace_oversized_simpoints.py  root_entrypoint.sh  run_clustering.sh  run_exec_single_simpoint.sh  run_memtrace_single_simpoint.sh  run_pt_single_simpoint.sh  run_simpoint_trace.py  run_simpoint_trace.sh  run_single_simpoint.sh  run_trace_post_processing.sh  user_entrypoint.sh
common/scripts/deprecated/: run_trace_post_processing.sh
docs/: README.GCP.CSE220.md  README.ISCA.md  README.add_workload.md  README.perf.md  README.trace.md  agent_cpu_evaluation.pptx  agent_workloads_presentation.py  langchain_phase_characterization.md  slurm_install_guide.md
fingerprint_src/: fpg.cpp
gcp/: README.md  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
json/: CI.json  agent_perf.json  agent_sim.json  agent_sim_lc_only.json  agent_sim_smoke.json  agent_trace.json  agent_trace_c2t.json  agent_trace_lc_only.json  agent_trace_smoke.json  autogen_perf.json  autogen_trace.json  autoware_trace.json  cse220.json  exp.json  langchain_perf.json  langchain_trace.json  langgraph_perf.json  langgraph_trace.json  perf.json  top_simpoint.json  top_simpoint_dbg.json  trace.json  your_experiment.json
micro2025_atr/: 00_dump_data.py  04_lifecycle.py  06_plot_ratio.py  10_plot_perf.py  12_plot_consumer.py  README.MICRO2025.ATR.md  atr.json
profiler/: cli.py  cli.sh  config.py  loader.py  plotter.py  tabulator.py
profiler/json/: config.json
scarab_stats/: README.md  __init__.py  ipc_scurve.py  scarab_stats.py  scarab_stats_concat_list.py  scarab_stats_lists.py  scarab_stats_prealloc.py  scarab_stats_quick_start.ipynb  serve_jupyter.sh  stat_collector.py
scarab_stats/power/: McPATConverter.py  README.md  aggregate_workload_power.py  client.py  converter.py  install_mcpat.sh  mcpat  parse_power_stat.py
scarab_stats/power/scarab_output/: PARAMS.out  power.pkl
scarab_stats/power/template/: mcpat_structure.json  params_table.json  stats_table.json
scarab_stats/power/xml/: template.xml
scripts/: cfg_analyzer.py  docker_cleaner.py  local_runner.py  prepare_docker_image.py  run_db.py  run_perf.py  run_simulation.py  run_trace.py  singularity_template.sh  slurm_collect_stats.sh  slurm_runner.py  update_scripts.sh  utilities.py  utilities.sh
scripts/deprecated/: run.sh
scripts/phase/: aggregate_perf.py  aggregate_roi.py  dispatch_perf.py
workloads/: collect_gdrive_ids.py  extract_top_simpoints.py  minimize_workloads.py  suite_db.json  workloads_db.json  workloads_db_top.json  workloads_top_simp.json
workloads/agent/: Dockerfile  requirements.txt  run_autogen.py  run_haystack.py  run_swe_agent.py  workload_root_entrypoint.sh  workload_user_entrypoint.sh
workloads/allbench_traces/: Dockerfile
workloads/autogen/: Dockerfile  requirements.txt  run_autogen.py  workload_user_entrypoint.sh
workloads/autoware/: Dockerfile  apps.list  play_next  simulator_append.txt  test.sh  workload_user_entrypoint.sh
workloads/autoware/control_validator_full_test/: CMakeLists.txt  package.xml
workloads/autoware/control_validator_full_test/control_validator_bag/: metadata.yaml
workloads/autoware/control_validator_full_test/src/: control_validator_full_test.cpp
workloads/autoware/crosswalk_velocity/: CMakeLists.txt  package.xml
workloads/autoware/crosswalk_velocity/crosswalk_bag/: metadata.yaml
workloads/autoware/crosswalk_velocity/crosswalk_bag2/: metadata2.yaml
workloads/autoware/crosswalk_velocity/crosswalk_map/: crosswalk_map.osm  crosswalk_map_simple.osm
workloads/autoware/crosswalk_velocity/src/: crosswalk_test.cpp
workloads/autoware/euclidean_cluster/: CMakeLists.txt  package.xml  timestamp.txt
workloads/autoware/euclidean_cluster/input_bag/: metadata.yaml
workloads/autoware/euclidean_cluster/src/: cluster_test_node.cpp
workloads/autoware/image_republisher/: package.xml  setup.cfg  setup.py
workloads/autoware/image_republisher/image_republisher/: image_republisher.py
workloads/autoware/lane_change/: CMakeLists.txt  package.xml
workloads/autoware/lane_change/input_bag/: input_bag_0.db3  lane_change_test_route2.yaml  metadata.yaml
workloads/autoware/lane_change/lane_change_map/: lane_change_map_simple.osm
workloads/autoware/lane_change/src/: my_lane_change_node.cpp
workloads/autoware/lane_detector/: CMakeLists.txt  package.xml
workloads/autoware/lane_detector/src/: my_lane_detector_node.cpp
workloads/autoware/mpc_controller_test/: CMakeLists.txt  package.xml
workloads/autoware/my_yabloc_pose_call_pkg/: CMakeLists.txt  package.xml
workloads/autoware/path_optimizer/: CMakeLists.txt  package.xml
workloads/autoware/pid_longitudinal_controller_test/: CMakeLists.txt  package.xml
workloads/autoware/pid_longitudinal_controller_test/pid_longitudinal_controller_bag/: metadata.yaml
workloads/autoware/pid_longitudinal_controller_test/src/: pid_longitudinal_controller.cpp
workloads/autoware/result_bag/: metadata.yaml
workloads/gapbs/: Dockerfile
workloads/geekbench/: Dockerfile  license.json
workloads/isca2024_udp/: Dockerfile
workloads/langchain/: Dockerfile  requirements.txt  run_langchain.py  workload_user_entrypoint.sh
workloads/langgraph/: Dockerfile  requirements.txt  run_langgraph.py  workload_root_entrypoint.sh  workload_user_entrypoint.sh
workloads/solr/: Dockerfile
workloads/spec2006/: Dockerfile  memtrace.cfg  workload_user_entrypoint.sh
workloads/spec2017/: Dockerfile  exec_fixed.sh  workload_root_entrypoint.sh  workload_user_entrypoint.sh
workloads/spec2026/: Dockerfile  spec2026_perf.json  workload_user_entrypoint.sh
workloads/sysbench/: Dockerfile
(+8 files in other folders)
