<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>euclidean_cluster</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mkim293@ucsc.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>rosbag2_interfaces</depend>
  <depend>autoware_euclidean_cluster</depend>
  <depend>autoware_point_types</depend>
  <depend>tier4_perception_msgs</depend>
  <depend>rosbag2_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
